--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,8 +13,8 @@
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
  
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
+    --primary: #07bea3; 
+    --primary-foreground: #042f2e;
  
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
@@ -72,5 +72,6 @@
   }
   body {
     @apply bg-background text-foreground;
+    @apply text-primary
   }
 }
